welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:3: error: reassignment to val
	if (vacation = false && (Int=1 || Int=2 ||Int=3 ||Int=4 || Int=5)) { return "7:00" }
                     ^alarmClock:4: error: reassignment to val
	else if (vacation = false && (Int=0 || Int=6 )) { return "10:00" }
                          ^alarmClock:4: error: type mismatch;
 found   : Unit
 required: String
	else if (vacation = false && (Int=0 || Int=6 )) { return "10:00" }
             ^