welcome.lessons.welcome.bat.bool2.AlarmClock.scala.code
def alarmClock(day:Int, vacation:Boolean): String = {

	if (vacation = false && (Int=1 || Int=2 ||Int=3 ||Int=4 || Int=5)) { return "7:00" }
	else if (vacation = false && (Int=0 || Int=6 )) { return "10:00" }
}
